<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_title_text"
            android:id="@+id/main_otsikko"
            android:layout_marginBottom="@dimen/section_horizontal_margin" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@android:drawable/btn_dropdown"
            android:text="@string/main_select_previous_cart"
            android:id="@+id/main_avaaedellinen_list"
            />
        <!--<LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/erotinborderi"
            android:padding="10dip">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_avaaedellinen_list"
                />

        </LinearLayout>-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_create_new_basket_btn_text"
            android:id="@+id/main_uusi_kauppa_btn"
            android:onClick="uusiKori_Click" />

</LinearLayout>
